# alpha-research

./: .alpha-loop.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPEN_ARCHIVES_AND_MCP_HANDOFF.md  README.md  SECURITY.md  ai-agent-investigation-playbook.md  ai-agent-research-setup.md  pyproject.toml  research-agent-implementation-guide.md  review-issue-31.json  review-issue-40.json
.alpha-loop/templates/: instructions.md
.claude/agents/: implementer.md
.codex/agents/: implementer.md  reviewer.md
.github/ISSUE_TEMPLATE/: bug-report.yml  epic.yml
config/: default.yaml  models.local.yaml  models.yaml  sources.yaml  state_election_recipes.yaml  url_blocklist.yaml
docs/: API_KEYS.md  CONFIG.md  HTTP_API.md  JOB_FOLDER_CONTRACT.md  MCP.md
scripts/: regen_readme_kinds.py  smoke_composability.sh  test.sh
src/research_agent/: __init__.py  __main__.py  api.py  cli.py  config.py  contract.py  daemon.py  doctor.py  errors.py  intake.py
tests/: test_candidate_roster_backtest.py  test_cli.py  test_contract.py  test_daemon.py  test_disk_cap.py  test_doctor.py  test_env_loading.py  test_http_api.py  test_intake.py  test_llm_budgets.py  test_llm_cache.py  test_llm_router.py  test_llm_smoke.py  test_loop_coverage_gating.py  test_mcp_lifecycle.py  test_mcp_tool_level.py  test_observability_events.py  test_orchestrator_checkpoint.py  test_orchestrator_critique.py  test_orchestrator_fragments.py  test_orchestrator_loop.py  test_orchestrator_plan.py  test_orchestrator_synth.py  test_planner_skill_injection.py  test_programmatic_api.py  test_prompts_loader.py  test_readme_doc.py  test_skills_content.py  test_skills_loader.py  test_storage_artifacts.py  test_storage_coverage.py  test_storage_db.py  test_storage_enrichment.py  test_storage_export.py  test_storage_hypotheses.py  test_storage_jobs.py  test_storage_markdown.py  test_storage_search.py  test_storage_sources.py  test_storage_tasks.py  (+35 more)
tests/fixtures/: fedregister_search_ai_eo.json  sanctions_eu.xml  sanctions_sdn_advanced.xml  sanctions_uk.csv  web_fetch_article.html  web_search_ddg.html  web_search_google.html
tests/integration/: check_mcp_lifecycle.py  check_mcp_tool_level.py  (+12 more)
tools/: smoke_1hour.sh
(+242 files in other folders)
